<resources>
    <string name="app_name">Coursework</string>
    <string name="app_display_name">147 Pal</string>
    <string name="app_slogan">The ultimate snooker companion</string>
    <string name="new_game">New game</string>
    <string name="rules">Rules</string>
    <string name="profiles">Profiles</string>
    <string name="practice_routines">Practice Routines</string>
    <string name="no_of_frames">No. of frames</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="extra_rules">Extra Rules</string>
    <string name="end_frame_at">End frame at</string>
    <string name="go_back">Go Back</string>
    <string name="create_game">Create Game</string>
    <string name="rules_description">Sample rules.....</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_routine">Create Routine</string>
    <string name="view_routine">View Routine</string>
    <string name="frame">Frame</string>
    <string name="end_game">End game</string>
    <string name="add_foul">Add Foul</string>
    <string name="add_foul_helper">What ball was the foul committed on?</string>
    <string name="game_stats">Game Stats</string>
    <string name="name">Name:</string>
    <string name="player_stats">Player stats</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="save">Save</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="sort">Sort</string>
    <string name="player_name">Player Name</string>
    <string name="time">Time</string>
    <string name="highest_break">Highest Break</string>
    <string name="total_score">Total Score</string>
    <string name="routine_preview">Routine Preview</string>
    <string name="likes">Likes</string>
    <string name="description">Description</string>
    <string name="favourites">Favourites</string>
    <string name="view_routines">View Routines</string>
    <string name="my_routines">My Routines</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="end_routine">End Routine</string>
    <string name="playing">Playing</string>
    <string name="routine_stats">Routine Stats</string>
    <string name="frame_stats">Frame Stats</string>
    <string name="next_frame">Next Frame</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="stat">Stat</string>
    <string name="score">Score</string>
    <string name="fastest_frame">Fastest Frame</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="frames_won">Frames Won</string>
    <string name="snookers_required">Snookers required</string>
    <string name="remaining">Remaining</string>
    <string name="frames_played">Frames Played</string>
    <string name="frames_won_percentage">Frames Won %</string>
    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>
    <string name="games_won_percentage">Games Won %</string>
    <string name="player">Player</string>
    <string name="share">Share</string>
    <string name="title_activity_action_bar">ActionBar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_share_bar">ShareBar</string>
    <string name="Favourite">Favourite</string>
    <string name="Like">Like</string>
    <string name="fastest_time">Fastest Time</string>
    <string name="highest_score">Highest Score</string>
    <string name="routine_stats_for">Routine stats for</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="miss">Miss</string>
    <string name="namedotdot">Name..</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="foul">Foul</string>
    <string name="player_indicator">Player indicator</string>
    <string name="behind">behind</string>
    <string name="current_break">Current break:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="user_guide">User Guide</string>
    <string name="snooker_table">Snooker table</string>
    <string name="routine_description">Routine description</string>
    <string name="routine_name">Routine name</string>
    <string name="example">example</string>
</resources>