<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"

    tools:context=".RoutineStats">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_routine_stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/routine_stats"
        android:textSize="45sp" />

    <!-- Title line -->
    <View
        android:id="@+id/hr_routine_stats_title"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tv_routine_stats_title"
        android:layout_marginBottom="20dp"
        android:background="#b2b2b2" />

    <!-- Elapsed time group -->
    <RelativeLayout
        android:id="@+id/grp_elapsed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hr_routine_stats_title"
        android:layout_centerHorizontal="true">

        <!-- Elapsed time label -->
        <TextView
            android:id="@+id/tv_elapsed_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:text="@string/elapsed_time" />

        <!-- Elapsed time value -->
        <TextView
            android:id="@+id/tv_elapsed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@id/tv_elapsed_time_label"
            android:text="@string/_0" />
    </RelativeLayout>

    <!-- Highest break group -->
    <LinearLayout
        android:id="@+id/grp_highest_break"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grp_elapsed_time"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <!-- Highest break label -->
        <TextView
            android:id="@+id/tv_highest_break_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:text="@string/highest_break"
            android:textAlignment="textEnd" />

        <!-- Highest break value -->
        <TextView
            android:id="@+id/tv_highest_break"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0.5"
            android:text="@string/_0"
            android:textAlignment="textStart" />
    </LinearLayout>

    <!-- Go back button -->
    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/go_back" />

    <!-- Share button-->
    <Button
        android:id="@+id/btn_share"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/share" />
</RelativeLayout>