<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- 1st Table Column -->
    <ImageView
        android:id="@+id/attrib_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_weight="2"
        android:background="@drawable/cell_shape"
        android:contentDescription="@string/snooker_table"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/snooker_routine_1_foreground"
        android:text="@string/example"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <!-- 2nd Table Column -->
    <TextView
        android:id="@+id/attrib_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:padding="3dp"
        android:text="@string/routine_preview"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <!-- 3rd Table Column -->
    <TextView
        android:id="@+id/attrib_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:padding="3dp"
        android:text="@string/routine_preview"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
</TableRow>