<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"

    tools:context=".ProfilesMenu">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_profiles_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/profiles"
        android:textSize="45sp" />

    <!-- Title line -->
    <View
        android:id="@+id/hr_profiles_title"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tv_profiles_title"
        android:layout_marginBottom="20dp"
        android:background="#b2b2b2" />

    <!-- Profiles list -->
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_go_back_profiles_menu"
        android:layout_below="@+id/hr_profiles_title"
        android:paddingVertical="20dp" />

    <!-- Go back button -->
    <Button
        android:id="@+id/btn_go_back_profiles_menu"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/go_back" />

    <!-- Create profile button -->
    <Button
        android:id="@+id/btn_create_profile"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/create_profile" />
</RelativeLayout>